# simple-effects

./: .gitignore  .swp  CHANGELOG.md  LICENSE  simple-effects.cabal  stack.yaml
bench/: Bench.hs
src/: Import.hs
src/Control/: Effects.hs  Effects1.hs  Effects2.hs
src/Control/Effects/: Async.hs  Early.hs  Generic.hs  List.hs  Newtype.hs  Order.hs  Parallel.hs  Plugin.hs  Reader.hs  Resource.hs  Signal.hs  State.hs  Yield.hs
src/Control/Monad/: Runnable.hs
src/Tutorial/: T1_Introduction.hs  T2_Details.hs  T3_CustomEffects.hs  Test.hs
test/: Fundep.hs  Main.hs
