name:                simple-effects
version:             0.1.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple-effects#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Effects
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
                     , interlude-l
                     , monad-control == 1.0.*
                     , transformers-base == 0.4.*
